--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,93 @@
+addict==2.4.0
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
 ccimport==0.4.2
 certifi @ file:///opt/conda/conda-bld/certifi_1655968806487/work/certifi
 charset-normalizer==3.0.1
+click==8.1.3
+comm==0.1.2
+ConfigArgParse==1.5.3
+contourpy==1.0.7
 cumm-cu113==0.4.5
+cycler==0.11.0
+dash==2.8.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+debugpy==1.6.6
+decorator==5.1.1
+executing==1.2.0
+fastjsonschema==2.16.2
 fire==0.5.0
+Flask==2.2.2
+fonttools==4.38.0
 idna==3.4
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+ipykernel==6.20.2
+ipython==8.9.0
+ipywidgets==8.0.4
+itsdangerous==2.1.2
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.2.0
+jsonschema==4.17.3
+jupyter_client==8.0.1
+jupyter_core==5.1.5
+jupyterlab-widgets==3.0.5
+kiwisolver==1.4.4
 lark==1.1.5
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+matplotlib-inline==0.1.6
 MinkowskiEngine==0.5.4
+nbformat==5.5.0
+nest-asyncio==1.5.6
 ninja==1.11.1
 numpy==1.24.1
+open3d==0.16.0
+packaging==23.0
+pandas==1.5.3
+parso==0.8.3
 pccm==0.4.4
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.4.0
+pkgutil_resolve_name==1.3.10
+platformdirs==2.6.2
+plotly==5.13.0
 portalocker==2.7.0
+prompt-toolkit==3.0.36
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
 pybind11==2.10.3
+Pygments==2.14.0
+pyparsing==3.0.9
+pyquaternion==0.9.9
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+pytz==2022.7.1
+PyYAML==6.0
+pyzmq==25.0.0
 requests==2.28.2
+scikit-learn==1.2.1
+scipy==1.10.0
 six==1.16.0
 spconv-cu113==2.3.2
+stack-data==0.6.2
+tenacity==8.1.0
 termcolor==2.2.0
+threadpoolctl==3.1.0
 torch==1.12.1+cu113
 torchsparse @ git+https://github.com/mit-han-lab/torchsparse.git@74099d10a51c71c14318bce63d6421f698b24f24
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.8.1
 typing_extensions==4.4.0
 urllib3==1.26.14
+wcwidth==0.2.6
+Werkzeug==2.2.2
+widgetsnbextension==4.0.5
+zipp==3.12.0
